--- a/src/front/js/pages/UserProfile/UserProfileStyles.css
+++ b/src/front/js/pages/UserProfile/UserProfileStyles.css
@@ -105,7 +105,7 @@
 }
 
 .activeGlowRates label {
-  border-color: red;
-  box-shadow: 0 0 10px red, 0 0 20px red,
-    0 0 30px red;
+  border-color: #3f51b5;
+  box-shadow: 0 0 10px #3f51b5, 0 0 20px #3f51b5,
+    0 0 30px #3f51b5;
 }
