--- a/src/front/js/pages/UserProfile/UserProfileStyles.css
+++ b/src/front/js/pages/UserProfile/UserProfileStyles.css
@@ -99,13 +99,13 @@
 
 .glowing-register label:hover,
 .glowing-register:has(input:checked) label {
-  border-color: red;
-  box-shadow: 0 0 10px red, 0 0 20px red,
-    0 0 30px red;
+  border-color: #3F51B5;
+  box-shadow: 0 0 10px #3F51B5, 0 0 20px #3F51B5,
+    0 0 30px #3F51B5;
 }
 
 .activeGlowRates label {
-  border-color: red;
-  box-shadow: 0 0 10px red, 0 0 20px red,
-    0 0 30px red;
+  border-color: #3F51B5;
+  box-shadow: 0 0 10px #3F51B5, 0 0 20px #3F51B5,
+    0 0 30px #3F51B5;
 }
