[ADD] cambiando estilos por contaminacion de main

--- a/src/front/js/pages/Caregivers/CaregiversStyles.css
+++ b/src/front/js/pages/Caregivers/CaregiversStyles.css
@@ -23,4 +23,7 @@
 .caregivers-scroll {
     overflow-y: scroll;
     height: 650px;
+    width: 700px;
+    scrollbar-width: thin;
+    scrollbar-color: rgb(80, 240, 255);
 }
