--- a/src/front/js/pages/Reserves/ReservesStyles.css
+++ b/src/front/js/pages/Reserves/ReservesStyles.css
@@ -201,7 +201,7 @@
 /* IMAGEN DE LOS PERRITOS EN LAS VISTAS DETALLADAS */
 
 .imagen-perrito-informacion-reserva {
-  width: 450px;
-  height: 450px;
+  width: 100%;
+  height: 100%;
   /* loading: lazy; ???? */
 }
